--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.Vremenarapp">
+            android:theme="@style/Theme.Vremenarapp"
+            android:usesCleartextTraffic="true"
+    >
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
