--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,11 +44,12 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     implementation 'androidx.navigation:navigation-fragment:2.4.1'
     implementation 'androidx.navigation:navigation-ui:2.4.1'
-    implementation("com.google.code.gson:gson:2.8.9")
-    implementation("com.android.volley:volley:1.2.1")
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-    implementation 'androidx.preference:preference:1.1.1'
-    implementation "androidx.browser:browser:1.4.0"
+    implementation 'androidx.preference:preference:1.2.0'
+    implementation 'androidx.browser:browser:1.4.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
